<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CompleteProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/onSurface"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/onSurface" />

        <TextView
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="@+id/ivBack"
            app:layout_constraintBottom_toBottomOf="@+id/ivBack"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:text="@string/complete_profile"
            android:textColor="@color/onSurface"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
        />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/please_fill_your_details_and_ncomplete_your_profile"
            android:textColor="@color/onSurfaceVariant"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <TextView
                android:id="@+id/tvInitial"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_bg"
                android:backgroundTint="@color/secondaryContainer"
                android:gravity="center"
                android:textColor="@color/onSecondaryContainer"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="M" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Name"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg_rounded_inactive"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="@dimen/_9sdp"
                android:drawableTint="@color/onSurface"
                android:hint="@string/please_enter_your_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="@dimen/_9sdp"
                android:textColor="@color/primary"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/mobile_number"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg_rounded_inactive"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_9sdp"
                android:drawableTint="@color/onSurface"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/please_enter_your_mobile_number"
                android:inputType="phone"
                android:padding="@dimen/_9sdp"
                android:textColor="@color/primary"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email_address"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg_rounded_inactive"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_9sdp"
                android:drawableTint="@color/onSurface"
                android:hint="@string/please_enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_9sdp"
                android:textColor="@color/primary"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>